--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -49,7 +49,7 @@
     <name>Pushy</name>
 
     <parent>
-        <groupId>sa.com.stcpay.blink.obelisk</groupId>
+        <groupId>sa.com.stcpay</groupId>
         <artifactId>pushy-parent</artifactId>
         <version>0.14.0</version>
     </parent>
