--- a/micrometer-metrics-listener/pom.xml
+++ b/micrometer-metrics-listener/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <artifactId>pushy-parent</artifactId>
         <groupId>sa.com.stcpay</groupId>
-        <version>0.14.0</version>
+        <version>0.14.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
