--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <artifactId>pushy-parent</artifactId>
         <groupId>sa.com.stcpay</groupId>
-        <version>0.14.0</version>
+        <version>0.14.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>pushy-benchmark</artifactId>
