--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <groupId>sa.com.stcpay</groupId>
     <artifactId>pushy-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.14.0</version>
+    <version>0.14.0-SNAPSHOT</version>
 
     <name>Pushy parent</name>
     <description>A Java library for sending push notifications</description>
@@ -272,21 +272,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.0</version>
-                </plugin>
-    
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.6</version>
-                    <executions>
-                        <execution>
-                            <id>sign-artifacts</id>
-                            <phase>verify</phase>
-                            <goals>
-                                <goal>sign</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
