--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -45,13 +45,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pushy</artifactId>
-    <version>0.14.0</version>
+    <version>0.14.0-SNAPSHOT</version>
     <name>Pushy</name>
 
     <parent>
         <groupId>sa.com.stcpay</groupId>
         <artifactId>pushy-parent</artifactId>
-        <version>0.14.0</version>
+        <version>0.14.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
